# pytest-dbt-conventions

./: .gitignore  .gitmodules  README.md  README.rst  pyproject.toml  pytest_plugin.py  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: ci.yml
dbt_projects/: .user.yml  profiles.yml
docs/: conf.py  index.rst
pytest_dbt_conventions/: plugin.py
tests/: example_conventions.py  test_plugin.py
