[tool.poetry]
name = "pytest-dbt-conventions"
version = "0.1.1"
description = "A pytest plugin for linting a dbt project's conventions"
authors = ["Tom Waterman <tjwaterman99@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"
artefacts = "^1.0.0a2"

[tool.poetry.dev-dependencies]
dbt-core = "^1.0.1"
dbt-postgres = "^1.0.1"

[tool.poetry.plugins.pytest11]
dbt-conventions = "pytest_dbt_conventions.plugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
